fix editor preview line-height

--- a/static/dashboard.tmpl
+++ b/static/dashboard.tmpl
@@ -9,6 +9,12 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/themes/default/style.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/highlight.js/latest/styles/github.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+    <style>
+    .editor-preview,
+    .editor-preview-active {
+        line-height: 35px;
+    }
+    </style>
 </head>
 <body>
     <nav class="flex items-center justify-between flex-wrap bg-teal p-6">
